comp/compstyle.css
/*General*/

* {
	margin: 0;
	padding: 0;
}

html, body {
	height: 100%;
	font-family: Open sans, sans-serif;
	background-image: url(../img/graphpaper.jpg);
	background-attachment: fixed;
	min-width: 580px;
}

.navlinks {
	font-size: 12px;
}

.navlinks a {
	padding-right: 2px;
	border-right: 2px solid black;
}

.navlinks a:first-child {
	padding-left: 2px;
	border-left: 2px solid black;
}

a {
	text-decoration: none;
	transition: color .3s;
	transition: text-shadow .3s;
}

a:visited {
	color: blue;
}

a:hover {
	color: #FFB700;
	text-shadow: 1px 2px 2px black;
}

/*Header Bar with Nav*/

header {
	width: 100%;
	height: 80px;
	position: absolute;
	top: 0;
	left: 0;
	text-align: center;
	margin-top: 10px;
	background: url(graphpaperbentcorners.jpg);
	border-bottom: 5px solid gray;
}

.faq {
	font-size: 16px;
}

.logotop {
	height: 70px;
	width: 70px;
	position: absolute;
	top: 23px;
	left: 20px;
	background: url(../img/logo.png) no-repeat;
	background-size: 98% 65%;
}

/*Part title*/

figure.partpic {
	display: inline-block;
	position: absolute;
	top: 180px;
}

figure.partpic img {
	height: 140px;
}

.titletext {
	position: absolute;
	top: 170px;
	left: 170px;
	width: 360px;
}

.titletext h1 {
	font-size: 56px;
}

.titletext h2 {
	font-size: 18px;
}

/*Content*/

.partcontent {
	margin-top: 340px;
	width: 500px;
	height: 1000px;
}

.partcontent h3 {
	padding: 10px 15px;
}

.basicinfo {
	display: inline-block;
}

.partcontent h3 {
	font-size: 16px;
	padding-left:15px;
}

.partcontent p, li {
	font-size: 14px;
	padding-left: 25px;
}

.quote {
	position: absolute;
	top: 370px;
	right: 50px;
	font-size: 48px;
	padding-left: 15px;
}

/*Responsive Design*/

@media screen and (max-width: 1080px) {
	header {
		height: 120px;
	}

	.faq {
		width: 290px;
		height: 21px;
	}
	
	.faq a {
		position: absolute;
		top: 50px;
		right: 0px;
	}

	header h3 .navlinks {
		position: absolute;
		top: 80px;
		right: 40px;
	}

	blockquote {
		font-size: 24px;
	}
}
@media screen and (max-width: 860px) {
	blockquote {
		display: none;
	}
}
@media screen and (min-width: 510px) {
	
	header h1 {
		font-size: 28px;
		position: absolute;
		top: 15px;
		left: 120px;
	}

	header h2 {
		font-size: 14px;
		position: absolute;
		top: 50px;
		left: 120px;
	}

	header h3 .faq {
		position: absolute;
		top: 23px;
		right: 44px;
	}

	header h3 .navlinks {
	position: absolute;
	top: 96px;
	right: 40px;
	}
}

@media screen and (max-width: 510px) {
	.logotop {
		display: none;
	}

	header {
		text-align: center;
	}

	header h1 {
		font-size: 24px;
		margin: 0 auto;
		position: relative;
	}

	header h2 {
		font-size: 10px;
	}


}

@media screen and (max-width: 395px) {
	.faq {
		margin: 0 auto;
	}
}

